# TiCare

./: .buildinfo  .gitignore  CONTRIBUTING.md  Navegacion.slx  README.md  TIAGo_Operation_Guide.md  __LICENSE.html  __PACKAGE.html  __links.html  __ros_package_dependencies.html  __standards.html  checkmodels.py  genindex.html  index.html  main.py  modules.html  objects.inv  patch_lidar.sh  prueba.txt  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  ticare_navigation.html  ticare_navigation.nav_manager.html  ticare_navigation.pose_recorder.html  user_docs.html
_sources/: __links.rst.txt  __ros_package_dependencies.rst.txt  __standards.rst.txt  index.rst.txt  modules.rst.txt  ticare_navigation.nav_manager.rst.txt  ticare_navigation.pose_recorder.rst.txt  ticare_navigation.rst.txt  user_docs.rst.txt
action_node/: package.xml  setup.cfg  setup.py
bittle_actions/: package.xml  setup.cfg  setup.py
bittle_bringup/: package.xml  setup.cfg  (+1 more)
ticare_communication/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ticare_communication/docs/: architecture.md  fsm.md
ticare_communication/launch/: com_launch_TIAGo.py  com_launch_simulation.py  communication_launch.py
ticare_communication/resource/: ticare_communication
ticare_communication/scripts/: stt_communication.py
ticare_communication/ticare_communication/: __init__.py  audio_saver.py  audio_saver_TIAGo.py  lanza_subprocess.py  state_manager.py  state_manager_TIAGo.py  state_manager_simulation.py
ticare_communication/ticare_communication/scripts/: command_map.py
(+142 files in other folders)
