<?xml version="1.0"?>
<package format="3">
  <name>ticare_communication</name>
  <version>0.0.0</version>
  <description>TiCare communication node</description>

  <maintainer email="mario.guerra.castelo@alumnos.upm.es">Mario</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- If you use audio, NLP, etc., add them here -->
  <!-- <exec_depend>audio_common_msgs</exec_depend> -->

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

